Fixing overlap layout on authn page

--- a/app/assets/stylesheets/sinai/_authn_page.scss
+++ b/app/assets/stylesheets/sinai/_authn_page.scss
@@ -48,6 +48,13 @@
     background: none;
     border: 2px solid $white;
     padding: 0.5rem 1.25rem;
+
+    &:hover {
+      color: $callisto-drk-red;
+      background: $white;
+      -webkit-transition: all 0.3s ease-in-out;
+      transition: all 0.3s ease-in-out;
+    }
   }
 }
 
@@ -74,7 +81,7 @@
   }
 
   .image-block {
-    grid-column: 2 / 5;
+    grid-column: 1 / 5;
     grid-row: 1 / 5;
   }
 
@@ -84,9 +91,11 @@
   }
 
   .text-block {
-    grid-column: 1 / 2;
-    grid-row: 4 / 5;
-    padding: 0;
+    grid-column: 1 / 5;
+    grid-row: 5 / 6;
+    padding-top: 2rem;
+    padding-left: 0;
+    padding-right: 0;
   }
 }
 
@@ -102,10 +111,28 @@
       font-size: 20px;
     }
   }
+  .image-block {
+    grid-column: 2 / 5;
+    grid-row: 1 / 5;
+  }
 
   .overlay-block {
+    grid-column: 1 / 3;
+    grid-row: 2 / 3;
     p {
-      font-size: 24px;
+      font-size: 22px;
     }
   }
+
+  .text-block {
+    grid-column: 1 / 2;
+    grid-row: 4 / 5;
+    padding: 0;
+  }
+
+  // .overlay-block {
+  //   p {
+  //     font-size: 22px;
+  //   }
+  // }
 }
